--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "^2.0.4"
+    "react-scripts": "^2.0.4",
+    "react-show-more-text": "^1.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
